--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div>
+  <h1>The Animation</h1>
+  <button class="btn btn-success">Add</button>
+</div>
+
 <app-course *ngFor="let course of courses" [course1]="course" [ngClass]="{active: course.isActive}" (click)="course.isActive = !course.isActive"></app-course>
