--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,10 @@
   <button class="btn btn-success">Add</button>
 </div>
 
-<app-course *ngFor="let course of courses" [course1]="course" [ngClass]="{active: course.isActive}" (click)="course.isActive = !course.isActive"></app-course>
+<app-course *ngFor="let course of courses" [course1]="course" [ngClass]="{active: course.isActive}" (click)="course.isActive = !course.isActive">
+
+</app-course>
+
+<app-second-course>
+  <h3> This is a ng-content</h3>
+</app-second-course>
